Refactored app.js for centralized structure